tests/error/modifier_errors/flag_loop2.err
Error: Invalid expression in dagger (at $FILE:6:4)
  | 
4 | @guppy(dagger=True, control=True)
5 | def test(i: int) -> None:
6 |     while i < 46:
  |     ^^^^^^^^^^^^^
7 |         pass
  | ^^^^^^^^^^^^ Loop found in a dagger context

Help: The function `test` is declared with the unitary flag: `unitary=True`.
Thus dagger constraints apply to its body.

Help: Control flow statements (e.g. loops and branches) are not allowed in
daggered contexts.

Guppy compilation failed due to 1 previous error
